addressed spacing issues with spans

--- a/website/src/components/posts/CollegeAdmissions/essay/essay.css
+++ b/website/src/components/posts/CollegeAdmissions/essay/essay.css
@@ -10,9 +10,8 @@
 }
 
 .essay-section {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .essay-sentence {
